// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-link example 1 1`] = `
<table
  style={
    Object {
      "background": "#f7f8fa",
    }
  }
>
  <tbody>
    <tr>
      <th>
        Default
      </th>
      <td>
        <p>
          Lorem ipsum
           
          <a
            className=""
            data-test-id={undefined}
            href="#nonexistent-link"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                ":visited": Object {
                  "color": "#8755ee",
                },
                "color": "#1865f2",
                "cursor": "pointer",
                "display": "inline",
                "outline": "none",
                "textDecoration": "none",
              }
            }
            to="#nonexistent-link"
          >
            Label
          </a>
          , dolor sit amet, consectetur adipiscing elit.
        </p>
      </td>
    </tr>
    <tr>
      <th>
        Hover/Focus
      </th>
      <td>
        <p>
          Lorem ipsum
           
          <a
            className=""
            data-test-id={undefined}
            href="#nonexistent-link"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                ":visited": Object {
                  "color": "#8755ee",
                },
                "color": "#1865f2",
                "cursor": "pointer",
                "display": "inline",
                "outline": "none",
                "textDecoration": "underline currentcolor solid",
              }
            }
            to="#nonexistent-link"
          >
            Label
          </a>
          , dolor sit amet, consectetur adipiscing elit.
        </p>
      </td>
    </tr>
    <tr>
      <th>
        Active/Press
      </th>
      <td>
        <p>
          Lorem ipsum
           
          <a
            className=""
            data-test-id={undefined}
            href="#nonexistent-link"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                ":visited": Object {
                  "color": "#6645b0",
                },
                "color": "#1b50b3",
                "cursor": "pointer",
                "display": "inline",
                "outline": "none",
                "textDecoration": "none",
              }
            }
            to="#nonexistent-link"
          >
            Label
          </a>
          , dolor sit amet, consectetur adipiscing elit.
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`wonder-blocks-link example 2 1`] = `
<table
  style={
    Object {
      "background": "#f7f8fa",
    }
  }
>
  <tbody>
    <tr>
      <th>
        Default
      </th>
      <td>
        <p>
          Lorem ipsum
           
          <a
            className=""
            data-test-id={undefined}
            href="#"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                ":visited": Object {
                  "color": "#8755ee",
                },
                "color": "#1865f2",
                "cursor": "pointer",
                "display": "inline",
                "outline": "none",
                "textDecoration": "none",
              }
            }
            to="#"
          >
            Label
          </a>
          , dolor sit amet, consectetur adipiscing elit.
        </p>
      </td>
    </tr>
    <tr>
      <th>
        Hover/Focus
      </th>
      <td>
        <p>
          Lorem ipsum
           
          <a
            className=""
            data-test-id={undefined}
            href="#"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                ":visited": Object {
                  "color": "#8755ee",
                },
                "color": "#1865f2",
                "cursor": "pointer",
                "display": "inline",
                "outline": "none",
                "textDecoration": "underline currentcolor solid",
              }
            }
            to="#"
          >
            Label
          </a>
          , dolor sit amet, consectetur adipiscing elit.
        </p>
      </td>
    </tr>
    <tr>
      <th>
        Active/Press
      </th>
      <td>
        <p>
          Lorem ipsum
           
          <a
            className=""
            data-test-id={undefined}
            href="#"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                ":visited": Object {
                  "color": "#6645b0",
                },
                "color": "#1b50b3",
                "cursor": "pointer",
                "display": "inline",
                "outline": "none",
                "textDecoration": "none",
              }
            }
            to="#"
          >
            Label
          </a>
          , dolor sit amet, consectetur adipiscing elit.
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`wonder-blocks-link example 3 1`] = `
<table
  style={
    Object {
      "background": "#f7f8fa",
    }
  }
>
  <tbody>
    <tr>
      <th>
        Default
      </th>
      <td>
        <p>
          Lorem ipsum
           
          <a
            className=""
            data-test-id={undefined}
            href="#nonexistent-link"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                ":visited": Object {
                  "color": "#8755ee",
                },
                "color": "#21242c",
                "cursor": "pointer",
                "display": "inline",
                "outline": "none",
                "textDecoration": "none",
              }
            }
            to="#nonexistent-link"
          >
            Label
          </a>
          , dolor sit amet, consectetur adipiscing elit.
        </p>
      </td>
    </tr>
    <tr>
      <th>
        Hover/Focus
      </th>
      <td>
        <p>
          Lorem ipsum
           
          <a
            className=""
            data-test-id={undefined}
            href="#nonexistent-link"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                ":visited": Object {
                  "color": "#8755ee",
                },
                "color": "#1865f2",
                "cursor": "pointer",
                "display": "inline",
                "outline": "none",
                "textDecoration": "underline currentcolor solid",
              }
            }
            to="#nonexistent-link"
          >
            Label
          </a>
          , dolor sit amet, consectetur adipiscing elit.
        </p>
      </td>
    </tr>
    <tr>
      <th>
        Active/Press
      </th>
      <td>
        <p>
          Lorem ipsum
           
          <a
            className=""
            data-test-id={undefined}
            href="#nonexistent-link"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                ":visited": Object {
                  "color": "#6645b0",
                },
                "color": "#1b50b3",
                "cursor": "pointer",
                "display": "inline",
                "outline": "none",
                "textDecoration": "none",
              }
            }
            to="#nonexistent-link"
          >
            Label
          </a>
          , dolor sit amet, consectetur adipiscing elit.
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`wonder-blocks-link example 4 1`] = `
<table
  style={
    Object {
      "background": "#0a2a66",
      "color": "rgba(255,255,255,0.64)",
    }
  }
>
  <tbody>
    <tr>
      <th>
        Default
      </th>
      <td>
        <p>
          Lorem ipsum
           
          <a
            className=""
            data-test-id={undefined}
            href="#nonexistent-link"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                ":visited": Object {
                  "color": "#ffffff",
                },
                "color": "#ffffff",
                "cursor": "pointer",
                "display": "inline",
                "outline": "none",
                "textDecoration": "none",
              }
            }
            to="#nonexistent-link"
          >
            Label
          </a>
          , dolor sit amet, consectetur adipiscing elit.
        </p>
      </td>
    </tr>
    <tr>
      <th>
        Hover/Focus
      </th>
      <td>
        <p>
          Lorem ipsum
           
          <a
            className=""
            data-test-id={undefined}
            href="#nonexistent-link"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                ":visited": Object {
                  "color": "#ffffff",
                },
                "color": "#ffffff",
                "cursor": "pointer",
                "display": "inline",
                "outline": "none",
                "textDecoration": "underline currentcolor solid",
              }
            }
            to="#nonexistent-link"
          >
            Label
          </a>
          , dolor sit amet, consectetur adipiscing elit.
        </p>
      </td>
    </tr>
    <tr>
      <th>
        Active/Press
      </th>
      <td>
        <p>
          Lorem ipsum
           
          <a
            className=""
            data-test-id={undefined}
            href="#nonexistent-link"
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchCancel={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            style={
              Object {
                ":visited": Object {
                  "color": "#b5cefb",
                },
                "color": "#b5cefb",
                "cursor": "pointer",
                "display": "inline",
                "outline": "none",
                "textDecoration": "none",
              }
            }
            to="#nonexistent-link"
          >
            Label
          </a>
          , dolor sit amet, consectetur adipiscing elit.
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;
